--- a/war/about.html
+++ b/war/about.html
@@ -55,22 +55,22 @@
 					<ul>
 						<li class="animfadeInRight" data-time="900"><a
 							href="index.html">Home</a>
-							<ul><li><a href="index-404.html">Not Found</a></li></ul></li>
+							<ul>
+								<li><a href="index-404.html">Not Found</a></li>
+							</ul></li>
 						<li class="animfadeInRight" data-time="1000"><a href="#">Menu</a>
 							<ul>
 								<li><a href="resto.html">Menu</a></li>
 								<li><a href="resto-vertical.html">Menu 2</a></li>
-							</ul>
-						</li>
+							</ul></li>
 						<li class="animfadeInRight" data-time="1200"><a
 							href="events.html">Sự kiện</a></li>
 						<li class="animfadeInRight" data-time="1300"><a
 							href="about.html">Thông tin</a></li>
 						<li class="animfadeInRight" data-time="1400"><a
-							href="contact.html">Liên hệ</a></li>
+							href="contact.html">Contact</a></li>
 						<li class="animfadeInRight" data-time="1500"><a
-							class="popup-form link-class" href="#reservation">Đặt chỗ</a>
-						</li>
+							class="popup-form link-class" href="#reservation">Booking</a></li>
 					</ul>
 				</nav>
 				<!-- mainmenu end -->
@@ -95,7 +95,8 @@
 				<section class="row" aria-label="section-heading">
 					<div class="col-md-12 center spacedown">
 						<h2 class="animfadeInDown" data-time="600">About Us</h2>
-						<h4 class="latin-font color animfadeInUp" data-time="800">Chúng tôi là ai</h4>
+						<h4 class="latin-font color animfadeInUp" data-time="800">Chúng
+							tôi là ai</h4>
 						<span class="devider-black animfadeInLeft" data-time="1000"></span>
 					</div>
 				</section>
@@ -108,9 +109,12 @@
 						<div class="min-left p-30px">
 							<h3>Welcome To Nexon</h3>
 							<h4 class="latin-font color">Our Story</h4>
-							<p>Nhật Bản nổi tiếng là dân tộc sở hữu bàn tay nghệ thuật, biến mọi thứ trở nên đẹp đẽ. Ngay cả với lẩu, món ăn tưởng chừng “xô bồ” vẫn có thể trở nên thanh lịch chỉ với một tờ giấy.</p>
+							<p>Nhật Bản nổi tiếng là dân tộc sở hữu bàn tay nghệ thuật,
+								biến mọi thứ trở nên đẹp đẽ. Ngay cả với lẩu, món ăn tưởng chừng
+								“xô bồ” vẫn có thể trở nên thanh lịch chỉ với một tờ giấy.</p>
 							<div class="btn-content">
-								<a class="detail-page link-class" href="popup-page/about-1.html">chi tiết</a>
+								<a class="detail-page link-class" href="popup-page/about-1.html">chi
+									tiết</a>
 							</div>
 						</div>
 					</div>
@@ -123,7 +127,10 @@
 						<div class="min-right p-30px">
 							<h3>Fast And Healthy Food</h3>
 							<h4 class="latin-font color">Danh sách</h4>
-							<p>Thay vì sử dụng nồi kim loại hay nồi đất, người Nhật còn dùng giấy trong thưởng thức lẩu. Nghe qua tưởng khó tin nhưng lẩu giấy lại chính là món ăn quan trọng có mặt trong những dịp đặc biệt như kỳ nghỉ và đám cưới truyền thống Nhật Bản..</p>
+							<p>Thay vì sử dụng nồi kim loại hay nồi đất, người Nhật còn
+								dùng giấy trong thưởng thức lẩu. Nghe qua tưởng khó tin nhưng
+								lẩu giấy lại chính là món ăn quan trọng có mặt trong những dịp
+								đặc biệt như kỳ nghỉ và đám cưới truyền thống Nhật Bản..</p>
 							<div class="btn-content">
 								<a class="detail-page link-class" href="popup-page/about-2.html">more
 									detail</a>
@@ -238,7 +245,7 @@
 				class="gray-popup-block mfp-hide animbounceInDown">
 				<div class="devider-doted">
 					<div class="col-md-12 m-20px">
-						<h3 class="latin-font color">Äáº·t bÃ n</h3>
+						<h3 class="latin-font color">Booking now</h3>
 						<div class="devider-black"></div>
 						<p>Open Monda - Saturday, from 9:00 am to 01:00 am</p>
 						<span>Phone +084 00 00 88 99</span>
@@ -285,40 +292,38 @@
 
 				<!-- main gallery -->
 				<div id="owl-gal" class="owl-carousel">
-
 					<div class="item">
-						<div class="port">
+						<div class="port big-img">
 							<div class="hovereffect">
-								<img class="gray-color" src="img/portofolio/1.jpg"
-									alt="imageportofolio" />
-								<div class="overlay">
-									<div class="wrap-overlay">
-										<h2>SPECIAL Nexon</h2>
-										<div class="devider-yellow"></div>
-										<span class="price">$60</span>
+								<a href="img/portofolio/1.jpg"> <img class="gray-color"
+									src="img/portofolio/1.jpg" alt="imageportofolio" />
+									<div class="overlay">
+										<div class="wrap-overlay">
+											<h2>Pizza Double Cheese</h2>
+											<div class="devider-yellow"></div>
+											<span class="price">$60</span>
+										</div>
+										<span class="info">click here</span>
 									</div>
-									<a class="info big-video"
-										href="http://www.dailymotion.com/video/x4gwyxl_happiness-royalty-free-music-for-commercial-use_music">click
-										here</a>
-								</div>
+								</a>
 							</div>
 						</div>
 					</div>
 
 					<div class="item">
-						<div class="port">
+						<div class="port big-img">
 							<div class="hovereffect">
-								<img class="gray-color" src="img/portofolio/2.jpg"
-									alt="imageportofolio" />
-								<div class="overlay">
-									<div class="wrap-overlay">
-										<h2>SPECIAL Nexon</h2>
-										<div class="devider-yellow"></div>
-										<span class="price">$80</span>
+								<a href="img/portofolio/2.jpg"> <img class="gray-color"
+									src="img/portofolio/2.jpg" alt="imageportofolio" />
+									<div class="overlay">
+										<div class="wrap-overlay">
+											<h2>Cánh ga chiên giòn</h2>
+											<div class="devider-yellow"></div>
+											<span class="price">$120</span>
+										</div>
+										<span class="info">click here</span>
 									</div>
-									<a class="info detail-page"
-										href="popup-page/special-menu-1.html">click here</a>
-								</div>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -348,7 +353,7 @@
 									src="img/portofolio/4.jpg" alt="imageportofolio" />
 									<div class="overlay">
 										<div class="wrap-overlay">
-											<h2>SPECIAL FRESRTO</h2>
+											<h2>Combo sườn nướng</h2>
 											<div class="devider-yellow"></div>
 											<span class="price">$120</span>
 										</div>
@@ -366,7 +371,7 @@
 									src="img/portofolio/5.jpg" alt="imageportofolio" />
 									<div class="overlay">
 										<div class="wrap-overlay">
-											<h2>SPECIAL Nexon</h2>
+											<h2>Pasta - la vista</h2>
 											<div class="devider-yellow"></div>
 											<span class="price">$99</span>
 										</div>
@@ -396,38 +401,37 @@
 					</div>
 
 					<div class="item">
-						<div class="port">
+						<div class="port big-img">
 							<div class="hovereffect">
-								<img class="gray-color" src="img/portofolio/7.jpg"
-									alt="imageportofolio" />
-								<div class="overlay">
-									<div class="wrap-overlay">
-										<h2>SPECIAL Nexon</h2>
-										<div class="devider-yellow"></div>
-										<span class="price">$110</span>
+								<a href="img/portofolio/7.jpg"> <img class="gray-color"
+									src="img/portofolio/7.jpg" alt="imageportofolio" />
+									<div class="overlay">
+										<div class="wrap-overlay">
+											<h2>SPECIAL Nexon</h2>
+											<div class="devider-yellow"></div>
+											<span class="price">$110</span>
+										</div>
+										<span class="info">click here</span>
 									</div>
-									<a class="info detail-page"
-										href="popup-page/special-menu-1.html">click here</a>
-								</div>
+								</a>
 							</div>
 						</div>
 					</div>
 
 					<div class="item">
-						<div class="port">
+						<div class="port big-img">
 							<div class="hovereffect">
-								<img class="gray-color" src="img/portofolio/8.jpg"
-									alt="imageportofolio" />
-								<div class="overlay">
-									<div class="wrap-overlay">
-										<h2>SPECIAL Nexon</h2>
-										<div class="devider-yellow"></div>
-										<span class="price">$50</span>
+								<a href="img/portofolio/8.jpg"> <img class="gray-color"
+									src="img/portofolio/8.jpg" alt="imageportofolio" />
+									<div class="overlay">
+										<div class="wrap-overlay">
+											<h2>SPECIAL Nexon</h2>
+											<div class="devider-yellow"></div>
+											<span class="price">$50</span>
+										</div>
+										<span class="info">click here</span>
 									</div>
-									<a class="info big-youtube"
-										href="https://www.youtube.com/watch?v=VsJkxWvQJIM">click
-										here</a>
-								</div>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -444,7 +448,8 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6">
-						&copy; Copyright 2017 -  by <span class="color">FIFA ONLINE 3</span>
+						&copy; Copyright 2017 - by <span class="color">FIFA ONLINE
+							3</span>
 					</div>
 					<div class="col-md-6 text-right">
 						<div class="social-icons">
