--- a/war/contact.html
+++ b/war/contact.html
@@ -67,9 +67,9 @@
 						<li class="animfadeInRight" data-time="1300"><a
 							href="about.html">Thông tin</a></li>
 						<li class="animfadeInRight" data-time="1400"><a
-							href="contact.html">Liên hệ</a></li>
+							href="contact.html">Contact</a></li>
 						<li class="animfadeInRight" data-time="1500"><a
-							class="popup-form link-class" href="#reservation">Đặt chỗ</a>
+							class="popup-form link-class" href="#reservation">Booking</a>
 						</li>
 					</ul>
 				</nav>
@@ -163,7 +163,7 @@
 				class="gray-popup-block mfp-hide animbounceInDown">
 				<div class="devider-doted">
 					<div class="col-md-12 m-20px">
-						<h3 class="latin-font color">Đặt chỗ ngay</h3>
+						<h3 class="latin-font color">Booking now</h3>
 						<div class="devider-black"></div>
 						<p>Mở cửa từ Thứ 2 - Thứ 7, from 9:00 am to 01:00 am</p>
 						<span>Phone +840 00 88 99</span>
@@ -208,41 +208,39 @@
 				<!-- close gallery end -->
 
 				<!-- main gallery -->
-				<div id="owl-gal" class="owl-carousel">
-
+				<div id="owl-gal" class="owl-carousel">	
 					<div class="item">
-						<div class="port">
+						<div class="port big-img">
 							<div class="hovereffect">
-								<img class="gray-color" src="img/portofolio/1.jpg"
-									alt="imageportofolio" />
-								<div class="overlay">
-									<div class="wrap-overlay">
-										<h2>SPECIAL Nexon</h2>
-										<div class="devider-yellow"></div>
-										<span class="price">$60</span>
+								<a href="img/portofolio/1.jpg"> <img class="gray-color"
+									src="img/portofolio/1.jpg" alt="imageportofolio" />
+									<div class="overlay">
+										<div class="wrap-overlay">
+											<h2>Pizza Double Cheese</h2>
+											<div class="devider-yellow"></div>
+											<span class="price">$60</span>
+										</div>
+										<span class="info">click here</span>
 									</div>
-									<a class="info big-video"
-										href="http://www.dailymotion.com/video/x4gwyxl_happiness-royalty-free-music-for-commercial-use_music">click
-										here</a>
-								</div>
+								</a>
 							</div>
 						</div>
 					</div>
 
 					<div class="item">
-						<div class="port">
+						<div class="port big-img">
 							<div class="hovereffect">
-								<img class="gray-color" src="img/portofolio/2.jpg"
-									alt="imageportofolio" />
-								<div class="overlay">
-									<div class="wrap-overlay">
-										<h2>SPECIAL Nexon</h2>
-										<div class="devider-yellow"></div>
-										<span class="price">$80</span>
+								<a href="img/portofolio/2.jpg"> <img class="gray-color"
+									src="img/portofolio/2.jpg" alt="imageportofolio" />
+									<div class="overlay">
+										<div class="wrap-overlay">
+											<h2>Cánh ga chiên giòn</h2>
+											<div class="devider-yellow"></div>
+											<span class="price">$120</span>
+										</div>
+										<span class="info">click here</span>
 									</div>
-									<a class="info detail-page"
-										href="popup-page/special-menu-1.html">click here</a>
-								</div>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -272,7 +270,7 @@
 									src="img/portofolio/4.jpg" alt="imageportofolio" />
 									<div class="overlay">
 										<div class="wrap-overlay">
-											<h2>SPECIAL FRESRTO</h2>
+											<h2>Combo sườn nướng</h2>
 											<div class="devider-yellow"></div>
 											<span class="price">$120</span>
 										</div>
@@ -290,7 +288,7 @@
 									src="img/portofolio/5.jpg" alt="imageportofolio" />
 									<div class="overlay">
 										<div class="wrap-overlay">
-											<h2>SPECIAL Nexon</h2>
+											<h2>Pasta - la vista</h2>
 											<div class="devider-yellow"></div>
 											<span class="price">$99</span>
 										</div>
@@ -320,38 +318,37 @@
 					</div>
 
 					<div class="item">
-						<div class="port">
+						<div class="port big-img">
 							<div class="hovereffect">
-								<img class="gray-color" src="img/portofolio/7.jpg"
-									alt="imageportofolio" />
-								<div class="overlay">
-									<div class="wrap-overlay">
-										<h2>SPECIAL Nexon</h2>
-										<div class="devider-yellow"></div>
-										<span class="price">$110</span>
+								<a href="img/portofolio/7.jpg"> <img class="gray-color"
+									src="img/portofolio/7.jpg" alt="imageportofolio" />
+									<div class="overlay">
+										<div class="wrap-overlay">
+											<h2>SPECIAL Nexon</h2>
+											<div class="devider-yellow"></div>
+											<span class="price">$110</span>
+										</div>
+										<span class="info">click here</span>
 									</div>
-									<a class="info detail-page"
-										href="popup-page/special-menu-1.html">click here</a>
-								</div>
+								</a>
 							</div>
 						</div>
 					</div>
 
 					<div class="item">
-						<div class="port">
+						<div class="port big-img">
 							<div class="hovereffect">
-								<img class="gray-color" src="img/portofolio/8.jpg"
-									alt="imageportofolio" />
-								<div class="overlay">
-									<div class="wrap-overlay">
-										<h2>SPECIAL Nexon</h2>
-										<div class="devider-yellow"></div>
-										<span class="price">$50</span>
+								<a href="img/portofolio/8.jpg"> <img class="gray-color"
+									src="img/portofolio/8.jpg" alt="imageportofolio" />
+									<div class="overlay">
+										<div class="wrap-overlay">
+											<h2>SPECIAL Nexon</h2>
+											<div class="devider-yellow"></div>
+											<span class="price">$50</span>
+										</div>
+										<span class="info">click here</span>
 									</div>
-									<a class="info big-youtube"
-										href="https://www.youtube.com/watch?v=VsJkxWvQJIM">click
-										here</a>
-								</div>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -394,8 +391,7 @@
 	<!-- Plugin JS -->
 	<script src="plugin/pluginsfastresto.js" type="text/javascript"></script>
 	<!--  map google -->
-	<script
-		src="https://maps.googleapis.com/maps/api/js?v=3&amp;key=AIzaSyDP5WGHhh4_lbXD6Ed9beuxOodcK9M4e3k"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyACmJ70dUGEtbfIDfHAe1zC7sCCGki7NbY&callback=myMap"></script>
 	<script src="js/map.js" type="text/javascript"></script>
 	<!-- fastresto JS -->
 	<script src="js/fastresto.js" type="text/javascript"></script>
